syntax = "proto3";

option csharp_namespace = "SharedModule.Protos";

package user;

message GetUserByIdRequest {
  string user_id = 1; // GUID as string
}

message UserResponse {
  string id = 1;
  string user_name = 2;
  string first_name = 3;
  string last_name = 4;
  string email = 5;
  string phone_number = 6;
}

service UserService {
  rpc GetUserById(GetUserByIdRequest) returns (UserResponse);
}
